--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./src/styles/main.css">
   <title>Memory Game</title>
 </head>
 <body>
+  <header>
+    <h2>Memory Game</h2>
+  </header>
+
+  <article class="home">
+    <h2>Home screen</h2>
+  </article>
   
+  <footer>
+    <div>
+      <button>NEXT</button>
+    </div>
+  </footer>
 <script src="./src/js/script.js"></script>
 </body>
 </html>
