feat_home-options-game-hidden-class-added

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   <article class="home">
     <h2>Home screen</h2>
   </article>
+
+  <article class="options  hidden">
+    <h2>Options screen</h2>
+  </article>
+
+  <article class="game  hidden">
+    <h2>Game screen</h2>
+  </article>
   
   <footer>
     <div>
