feat_js-btns-added

--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
     <h2>Memory Game</h2>
   </header>
 
-  <article class="home">
+  <article class="home  js-home">
     <h2>Home screen</h2>
   </article>
 
-  <article class="options  hidden">
+  <article class="options  js-options  hidden">
     <h2>Options screen</h2>
   </article>
 
-  <article class="game  hidden">
+  <article class="game  js-game  hidden">
     <h2>Game screen</h2>
   </article>
   
   <footer>
     <div>
-      <button>NEXT</button>
+      <button class="js-btn-next">NEXT</button>
+      <button class="js-btn-home">HOME</button>
+      <button class="js-btn-start">START</button>
     </div>
   </footer>
 <script src="./src/js/script.js"></script>
