feat_btn-events-added

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <footer>
     <div>
       <button class="js-btn-next">NEXT</button>
-      <button class="js-btn-home">HOME</button>
-      <button class="js-btn-start">START</button>
+      <button class="js-btn-home  hidden">HOME</button>
+      <button class="js-btn-start  hidden">START</button>
     </div>
   </footer>
 <script src="./src/js/script.js"></script>
