fix_divs->sections

--- a/index.html
+++ b/index.html
@@ -14,22 +14,29 @@
   </header>
 
   <main>
-    <div class="main__home  js-home  active">Home screen</div>
-    <div class="main__options  js-options">Options screen</div>
-    <div class="main__game  js-game">Game screen</div>
+    <section class="main__home  js-home  active">Home screen</section>
+    <section class="main__options  js-options">
+      <div>
+        <h3>stack size:</h3>
+      </div>
+      <div>
+        <h3>difficult:</h3>
+      </div>
+    </section>
+    <section class="main__game  js-game">Game screen</section>
   </main>
   
   <footer>
-    <div class="footer__home  js-home  active">
+    <section class="footer__home  js-home  active">
       <button class="js-btn-next">NEXT</button>
-    </div>
-    <div class="footer__options  js-options">
+    </section>
+    <section class="footer__options  js-options">
       <button class="js-btn-home">HOME</button>
       <button class="js-btn-start">START</button>
-    </div>
-    <div class="footer__game  js-game">
+    </section>
+    <section class="footer__game  js-game">
       <button class="js-btn-stop">STOP</button>
-    </div>
+    </section>
   </footer>
 <script src="./src/js/script.js"></script>
 </body>
