style_home-style-draw-added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,24 @@
   </header>
 
   <main>
-    <section class="main__home  js-home  active">Home screen</section>
+    <section class="main__home  js-home  active">
+      <div class="logo__cont">
+        <img src="./src/assets/imgs/logo.svg" alt="game-logo">
+      </div>
+      <div class="language__cont">
+        <div class="title__cont">
+          <h2>Choose a language</h2>
+        </div>
+        <div class="flags__cont">
+          <div class="flag__cont">
+            <img src="./src/assets/icons/flag_hu.svg" alt="language-hungary-flag">
+          </div>
+          <div class="flag__cont">
+            <img src="./src/assets/icons/flag_uk.svg" alt="language-unitedkingdom-flag">
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="main__options  js-options">
       <form action="#">
         <div>
