fix_form-radio-button-positions

--- a/index.html
+++ b/index.html
@@ -34,27 +34,50 @@
     </section>
     <section class="main__options  js-options">
       <form action="#">
-        <div>
-          <h3>stack size:</h3>
+        <div class="component__cont">
+          <div class="title__cont">
+            <h2>stack size:</h2>
+          </div>
+          <div class="input__cont">
+            <label for="few">few
+              <input type="radio" id="few" name="stack-size" value="few">
+            </label>
+            <label for="moderate">moderate
+              <input type="radio" id="moderate" name="stack-size" value="moderate">
+            </label>
+            <label for="many">many
+              <input type="radio" id="many" name="stack-size" value="many">
+            </label>
+          </div>
         </div>
-        <div>
-          <input type="radio" id="few" name="stack-size" value="few">
-          <label for="few">few</label>
-          <input type="radio" id="moderate" name="stack-size" value="moderate">
-          <label for="moderate">moderate</label>
-          <input type="radio" id="many" name="stack-size" value="many">
-          <label for="many">many</label>
+        <div class="component__cont">
+          <div class="title__cont">
+            <h2>difficult:</h2>
+          </div>
+          <div class="input__cont">
+            <label for="easy">easy
+              <input type="radio" id="easy" name="difficult" value="easy">
+            </label>
+            <label for="medium">medium
+              <input type="radio" id="medium" name="difficult" value="medium">
+            </label>
+            <label for="hard">hard
+              <input type="radio" id="hard" name="difficult" value="hard">
+            </label>
+          </div>
         </div>
-        <div>
-          <h3>difficult:</h3>
-        </div>
-        <div>
-          <input type="radio" id="easy" name="difficult" value="easy">
-          <label for="easy">easy</label>
-          <input type="radio" id="medium" name="difficult" value="medium">
-          <label for="medium">medium</label>
-          <input type="radio" id="hard" name="difficult" value="hard">
-          <label for="hard">hard</label>
+        <div class="component__cont">
+          <div class="title__cont">
+            <h2>card color:</h2>
+          </div>
+          <div class="input__cont">
+            <label for="blue">blue
+              <input type="radio" id="blue" name="card-color" value="blue">
+            </label>
+            <label for="red">red
+              <input type="radio" id="red" name="card-color" value="red">
+            </label>
+          </div>
         </div>
       </form>
     </section>
