--- a/index.html
+++ b/index.html
@@ -33,20 +33,20 @@
       </div>
     </section>
     <section class="main__options  js-options">
-      <form action="#">
+      <form class="js-form" action="#">
         <div class="component__cont">
           <div class="title__cont">
             <h2>stack size:</h2>
           </div>
           <div class="input__cont">
             <label for="few">few
-              <input type="radio" id="few" name="stack-size" value="few">
+              <input type="radio" class="js-stackSize" id="few" name="stackSize" value="6">
             </label>
             <label for="moderate">moderate
-              <input type="radio" id="moderate" name="stack-size" value="moderate">
+              <input type="radio" class="js-stackSize" id="moderate" name="stackSize" value="9">
             </label>
             <label for="many">many
-              <input type="radio" id="many" name="stack-size" value="many">
+              <input type="radio" class="js-stackSize" id="many" name="stackSize" value="13">
             </label>
           </div>
         </div>
@@ -56,13 +56,13 @@
           </div>
           <div class="input__cont">
             <label for="easy">easy
-              <input type="radio" id="easy" name="difficult" value="easy">
+              <input type="radio" id="easy" name="difficult" value="1">
             </label>
             <label for="medium">medium
-              <input type="radio" id="medium" name="difficult" value="medium">
+              <input type="radio" id="medium" name="difficult" value="2">
             </label>
             <label for="hard">hard
-              <input type="radio" id="hard" name="difficult" value="hard">
+              <input type="radio" id="hard" name="difficult" value="3">
             </label>
           </div>
         </div>
@@ -72,16 +72,16 @@
           </div>
           <div class="input__cont">
             <label for="blue">blue
-              <input type="radio" id="blue" name="card-color" value="blue">
+              <input type="radio" id="blue" name="cardColor" value="true">
             </label>
             <label for="red">red
-              <input type="radio" id="red" name="card-color" value="red">
+              <input type="radio" id="red" name="cardColor" value="false">
             </label>
           </div>
         </div>
       </form>
     </section>
-    <section class="main__game  js-game">Game screen</section>
+    <section class="main__game  js-game"></section>
   </main>
   
   <footer>
