refactor_modulare-js-file-structure-draw-added

--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
       <button class="js-btn-stop">STOP</button>
     </section>
   </footer>
-<script src="./src/js/script.js"></script>
+  <script src="/src/js/pagesNav.js"></script> <!-- Az oldalak közötti navigáció -->
+  <script src="/src/js/app.js"></script> <!-- Az alapvető játék inicializálás és vezérlés. -->
+  <script src="/src/js/gameLogic.js"></script> <!-- A játék logikájáért felelős kód (például a memória játék szabályai). -->
+  <script src="/src/js/ui.js"></script> <!-- A felhasználói felület frissítésével kapcsolatos kód (például a kártyák megjelenítése). -->
+  <script src="/src/js/utils.js"></script> <!-- Segédfunkciók, amelyek több fájlban is használhatók (például véletlenszerű számok generálása). -->
 </body>
 </html>
