feat_function-renderCards-added

--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
         </div>
       </form>
     </section>
-    <section class="main__game  js-game"></section>
+    <section class="main__game  js-game">
+      <div class="cards__cont  js-cards-cont">
+        <!-- LEGENERÁLT KÁRTYÁK -->
+      </div>
+    </section>
   </main>
   
   <footer>
