--- a/index.html
+++ b/index.html
@@ -101,6 +101,6 @@
     </section>
   </footer>
   <script type="module" src="./src/js/app.js"></script>
-  <script type="module" src="./src/js/app.js"></script>
+  <script type="module" src="./src/js/pageNavigation.js"></script>
 </body>
 </html>
