--- a/index.html
+++ b/index.html
@@ -102,5 +102,7 @@
   </footer>
   <script type="module" src="./src/js/app.js"></script>
   <script type="module" src="./src/js/pageNavigation.js"></script>
+  <script type="module" src="./src/js/cardGenerator.js"></script>
+  <script type="module" src="./src/js/cardActions.js"></script>
 </body>
 </html>
