--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     </section>
   </footer>
   <script type="module" src="./src/js/app.js"></script>
-  <script type="module" src="./src/js/pageNavigation.js"></script>
+  <script type="module" src="./src/js/navigation.js"></script>
   <script type="module" src="./src/js/gameInitializer.js"></script>
   <script type="module" src="./src/js/cardActions.js"></script>
 </body>
