--- a/index.html
+++ b/index.html
@@ -125,5 +125,6 @@
   <script type="module" src="./src/js/initializeGame.js"></script>
   <script type="module" src="./src/js/gamePlay.js"></script>
   <script type="module" src="./src/js/timer.js"></script>
+  <script type="module" src="./src/js/utils.js"></script>
 </body>
 </html>
