--- a/index.html
+++ b/index.html
@@ -116,15 +116,26 @@
       <button class="js-btn-start">START</button>
     </section>
     <section class="footer__game  js-game">
-      <p class="js-time">TIME</p>
-      <p class="js-score">SCORE</p>
-      <button class="js-btn-stop">STOP</button>
+      <div class="details__cont">
+        <div class="time__cont">
+          <h3>TIME</h3>
+          <p class="js-time"></p>
+        </div>
+        <div class="score__cont">
+          <h3>SCORE</h3>
+          <p class="js-score"></p>
+        </div>
+      </div>
+      <div class="button__cont">
+        <button class="js-btn-stop">STOP</button>
+      </div>
     </section>
   </footer>
   <script type="module" src="./src/js/app.js"></script>
   <script type="module" src="./src/js/initializeGame.js"></script>
   <script type="module" src="./src/js/gamePlay.js"></script>
   <script type="module" src="./src/js/timer.js"></script>
+  <script type="module" src="./src/js/score.js"></script>
   <script type="module" src="./src/js/utils.js"></script>
 </body>
 </html>
