feat_popup-window-draw-added

--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
     </section>
   </main>
 
-  <!--
-  <form class="popup__congrats  js-popup__congrats" action="#">
+  <form class="popup__congrats  hidden  js-popup__congrats" action="#">
     <div>
       <h2>Congratulations!</h2>
     </div>
@@ -105,7 +104,6 @@
       <button class="js-btn-savescore">Save Score</button>
     </div>
   </form>
-  -->
   
   <footer>
     <section class="footer__home  js-home  active">
